--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-data-grid": "^7.0.0-canary.43",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
     "xlsx": "^0.18.5"
